[tool.poetry]
name = "autonomous_car"
version = "0.1.0"
description = ""
authors = ["Chiggy-Playz <garg.chirag2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
torchrl = "^0.5.0"
tensordict = "^0.5.0"
torch = { version = "2.4.0", source = "pytorch" }
torchvision = { version = "0.19.0", source = "pytorch" }
loguru = "^0.7.2"
carla = "^0.9.15"
tensorboard = "^2.17.1"
opencv-python = "^4.10.0.84"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ipython = "^8.27.0"
ptpython = "^3.0.29"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120